Restore durable Java producer observations and verify TLS service identity